--- a/templatemo_458_lavish/index.html
+++ b/templatemo_458_lavish/index.html
@@ -1,3 +1,4 @@
+  
 <!DOCTYPE html>
 <html lang="en">
 	<head>
@@ -40,10 +41,10 @@
 				<div class="row">
 					<div class="col-md-2"></div>
 					<div class="col-md-8 wow fadeIn" data-wow-delay="0.9s">
-						<h3>Simple and Elegant</h3>
-						<h1>Lavish</h1>
-						<h2 class="rotate">DESIGNER &AMP; DEVELOPER, UI &AMP; UX SPECIALIST, PROJECT LEADER</h2>
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna aliquam erat volutpat.</p>
+						<h3>Welcome to my page</h3>
+						<h1>HELLO I'M ISURU DESHAN</h1>
+						<h2 class="rotate">3D DESIGNER &AMP; DIGITAL ARTIST, TRAVELER &AMP; NATURE LOVER, PROJECT LEADER</h2>
+						<p>Never giveup untill you become golden.</p>
 						<a href="#work" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="1s">Get started</a>
 					</div>
 					<div class="col-md-2"></div>
@@ -68,8 +69,8 @@
 								<i class="fa fa-laptop"></i>
 							</div>
 							<div class="media-body">
-								<h3 class="media-heading">Responsive Mobile</h3>
-								<p>Lavish CSS Template is designed by templatemo. Download, edit and use this layout.</p>
+								<h3 class="media-heading">3D Artist</h3>
+								<p>Creating models,Rendering,composting and proffesional photo editing is a hobby for me.</p>
 							</div>
 						</div>
 					</div>
@@ -92,8 +93,8 @@
 								<i class="fa fa-paper-plane"></i>
 							</div>
 							<div class="media-body">
-								<h3 class="media-heading">UI &AMP; UX Design</h3>
-								<p>Credits go to <a rel="nofollow" href="https://pixabay.com">Pixabay</a> and <a rel="nofollow" href="http://unsplash.com">Unsplash</a> for images used in this free CSS website template.</p>
+								<h3 class="media-heading"> Traveler &AMP; Nature Lover</h3>
+								<p>Wondering the nature is the best thing I had ever feel."nature is the best art of god"</p>
 							</div>
 						</div>
 					</div>
@@ -108,17 +109,17 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6 col-xs-11 wow fadeInLeft" data-wow-delay="0.9s">
-						<h2>ABOUT LAVISH</h2>
-						<h4>DESIGNER &AMP; DEVELOPER</h4>
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna aliquam erat volutpat.</p>
-						<p>Dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet.</p>
+						<h2>ABOUT ME</h2>
+						<h4>DESIGNER &AMP; INVENTOR</h4>
+						<p>World id full of challenges.It is pretty difficult to accept the challange from the world but we can try our best.</p>
+						<p>Inventing and designing is the best thing we can do for the world .</p>
 					</div>
 					<div class="col-md-6 col-xs-11 wow fadeInRight" data-wow-delay="0.9s">
-						<span class="text-top">Web Design <small>95%</small></span>
+						<span class="text-top">3D designing <small>85%</small></span>
 							<div class="progress">
 								<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 95%;"></div>
 							</div>
-						<span>Mobile Apps <small>80%</small></span>
+						<span>Web designing <small>70%</small></span>
 							<div class="progress">
 								<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
 							</div>
@@ -200,9 +201,9 @@
 					<div class="col-lg-5 col-lg-offset-1 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
 						<address>
 							<p class="contact-title">CONTACT ME</p>
-							<p><i class="fa fa-phone"></i> 090-080-0760</p>
-							<p><i class="fa fa-envelope-o"></i> info@company.com</p>
-							<p><i class="fa fa-map-marker"></i> 120 Old Walking Street, GL 16060</p>
+							<p><i class="fa fa-phone"></i> 0774038199</p>
+							<p><i class="fa fa-envelope-o"></i> deshanscb99@gmail.com</p>
+							<p><i class="fa fa-map-marker"></i> No 218/1,Samagi Mawatha,Wanduramulla,Panadura</p>
 						</address>
 					</div>
 					<div class="col-lg-6 col-md-6 col-xs-10 wow fadeInUp" data-wow-delay="0.6s">
